# kins

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .npmrc  .oxfmtrc.json  AGENTS.md  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  REPO.bazel  buf.gen.yaml  flake.nix  go.work  go.work.sum  lefthook.yaml  lefthook.yml  multitool.lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  vite.config.ts
.devcontainer/: Dockerfile  README.md  devcontainer-lock.json  devcontainer.json  install.sh  post_create.sh
.zed/: settings.json
backend/: README.md
backend/app/admin/manager/: go.mod  go.sum
backend/app/admin/manager/cmd/: BUILD.bazel  main.go
backend/app/admin/member/: go.mod
backend/app/admin/member/cmd/: main.go
backend/app/rpc/account/cmd/: main.go  wire.go  wire_gen.go
backend/app/service/account/: go.mod
backend/app/service/account/cmd/: application.yaml  main.go  wire.go
backend/app/service/account/infra/: provider.go
backend/app/service/account/rpc/: provider.go  rpc.go
backend/app/service/account/rpc/handler/: account.go
backend/app/service/agent/: go.mod
backend/app/service/agentic/: go.mod
backend/app/service/agentic/cmd/: main.go
backend/app/service/member/: go.mod  go.sum
backend/kapis/test/v1/: BUILD.bazel
backend/kapis/test2/v1/: BUILD.bazel
deploy/: README.md
docs/: BUILD.bazel  book.toml
frontend/: README.md
frontend/app/admin/: global.ts  next.config.ts  package.json  proxy.ts  tsconfig.json
frontend/app/admin/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/app/(ai-layout)/: layout.tsx
frontend/app/admin/app/(ai-layout)/dashboard/: page.tsx
frontend/app/admin/app/(base-layout)/contacts/departmentanduser/: page.tsx
frontend/app/admin/app/(base-layout)/contacts/role/: page.tsx
frontend/app/admin/app/(base-layout)/enterprise/info/: page.tsx
frontend/app/admin/app/[locale]/: layout.tsx
frontend/app/admin/app/[locale]/agentic/: layout.tsx  page.tsx
frontend/app/admin/app/[locale]/agentic/skills/: page.tsx
frontend/app/admin/app/[locale]/classic/: page.tsx
frontend/app/admin/app/[locale]/classic/contacts/: layout.tsx
frontend/app/admin/app/agentic/: layout.tsx  page.tsx
frontend/app/admin/app/classic/: layout.tsx
frontend/app/admin/app/classic/contacts/departmentanduser/: page.tsx
frontend/app/admin/app/classic/enterprise/: layout.tsx
frontend/app/admin/app/signin/: page.tsx
frontend/app/admin/components/: app-initializer.tsx
frontend/app/admin/components/client/: settings.tsx
frontend/app/admin/components/tiptap-ui-primitive/avatar/: avatar.tsx
frontend/app/admin/components/tiptap-ui-utils/suggestion-menu/: suggestion-menu-types.ts  suggestion-menu.tsx
frontend/app/admin/components/tiptap-ui/emoji-trigger-button/: emoji-trigger-button.tsx  use-emoji-trigger.ts
frontend/app/admin/components/tiptap-ui/mathematics-button/: mathematics-button.tsx  use-mathematics.ts
frontend/app/admin/components/tiptap-ui/mention-dropdown-menu/: mention-dropdown-menu.tsx
frontend/app/admin/components/tiptap-ui/mention-trigger-button/: mention-trigger-button.tsx  use-mention-trigger.ts
frontend/app/admin/components/tiptap-ui/slash-command-trigger-button/: slash-command-trigger-button.tsx  use-slash-command-trigger.ts
frontend/app/admin/components/tiptap-ui/slash-dropdown-menu/: slash-dropdown-menu.tsx  use-slash-dropdown-menu.ts
frontend/app/admin/contexts/: next-intl-context.tsx  next-theme-context.tsx  tanstack-query-context.tsx
frontend/app/admin/feature/login/: locale-switcher.tsx  normal-form.tsx  theme-toggle.tsx
frontend/app/admin/i18n/: language.ts  request.ts
frontend/app/admin/lib/: tiptap-advanced-utils.ts  tiptap-collab-utils.ts  tiptap-utils.ts
frontend/app/admin/locales/: en.json
frontend/app/admin/src/app/: layout.tsx
frontend/app/admin/src/app/_providers/: index.ts
frontend/app/admin/src/app/_providers/next-intl/: index.ts  next-intl-provider.tsx
frontend/app/admin/src/app/_providers/next-themes/: index.ts
frontend/app/admin/src/app/_providers/shadcn/: index.ts  shadcn-provider.tsx
frontend/app/admin/src/app/_providers/tanstack-query/: index.tsx  tanstack-query-provider.tsx
frontend/app/admin/src/app/agentic/: layout.tsx  page.tsx
frontend/app/admin/src/app/agentic/task/: layout.tsx
frontend/app/admin/src/app/classic/: page.tsx
frontend/app/admin/src/app/layouts/: index.ts
frontend/app/admin/src/app/layouts/agentic/: AgenticLayout.tsx  index.ts
frontend/app/admin/src/app/layouts/classic/: ClassicLayout.tsx  index.ts
frontend/app/admin/src/app/layouts/root/: RootLayout.tsx  index.ts
frontend/app/admin/src/app/provider/: index.ts
frontend/app/admin/src/app/provider/next-themes/: next-themes-provider.tsx
frontend/app/admin/src/app/provider/tanstack-query/: tanstack-query-provider.tsx
frontend/app/admin/src/app/signin/: page.tsx
frontend/app/admin/src/app/styles/: globals.css
frontend/app/admin/src/pages/agentic/: AgenticPage.tsx  index.ts
frontend/app/admin/src/pages/conversation/: index.ts
frontend/app/admin/src/pages/conversation/detail/: ConversationDetailPage.tsx  index.ts
frontend/app/admin/src/pages/signin/: SigninPage.tsx  index.ts
frontend/app/admin/src/pages/skill/: SkillPage.tsx  index.ts
frontend/app/admin/src/shared/api/: index.ts  query-client.api.ts
frontend/app/admin/src/shared/config/: index.ts
frontend/app/admin/src/shared/config/metedata/: default.ts  index.ts
frontend/app/admin/src/shared/i18n/: config.ts  const.ts  cookie.ts  dictionaries.ts  index.ts  request.ts  routing.ts
frontend/app/admin/src/widgets/signin/: index.ts
frontend/app/miniApp/config/: dev.ts  index.ts  prod.ts
helm/openkairo/: Chart.yaml  values.yaml
helm/openkairo/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/openkairo/templates/tests/: test-connection.yaml
infra/aws/: BUILD.bazel  go.mod  go.sum
tools/: BUILD.bazel  go.mod  multitool.lock.json  tools.go  tools.json
(+8 files in other folders)
