load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(
    name = "node_modules",
)

# gazelle:prefix github.com/qhai-dev/kairo

# gazelle:exclude .devcontainer
# gazelle:exclude deploy
# gazelle:exclude docs
# gazelle:exclude frontend
# gazelle:exclude scripts
gazelle(
    name = "gazelle",
)
