load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_rust_mdbook//:defs.bzl", "mdbook", "mdbook_server")

npm_link_all_packages(
    name = "node_modules",
)

# gazelle:prefix github.com/qhai-dev/kairo

# gazelle:exclude deploy
# gazelle:exclude docs
# gazelle:exclude frontend
# gazelle:exclude scripts
gazelle(
    name = "gazelle",
)

mdbook(
    name = "docs",
    srcs = [
        "//docs:all_docs",
    ],
    book = "book.toml",
)

mdbook_server(
    name = "docs_server",
    book = ":docs",
)
