bazel_dep(
    name = "rules_go",
    version = "0.61.1",
)
bazel_dep(
    name = "gazelle",
    version = "0.51.3",
)

go_sdk = use_extension(
    "@rules_go//go:extensions.bzl",
    "go_sdk",
)
go_sdk.download(
    version = "1.26.4",
)

go_deps = use_extension(
    "@gazelle//:extensions.bzl",
    "go_deps",
)
go_deps.from_file(
    go_work = "//:go.work",
)
use_repo(
    go_deps,
    "com_github_go_logr_logr",
    "com_github_go_logr_zapr",
    "com_github_google_wire",
    "com_github_spf13_viper",
    "com_github_spf13_viper_remote",
    "io_etcd_go_etcd_client_v3",
    "org_golang_google_grpc",
    "org_uber_go_zap",
)

bazel_dep(
    name = "protobuf",
    version = "35.1",
)
bazel_dep(
    name = "rules_buf",
    version = "0.5.4",
)
bazel_dep(
    name = "googleapis",
    version = "0.0.0-20260623-b6f9ff05",
)
bazel_dep(
    name = "grpc_ecosystem_grpc_gateway",
    version = "2.29.0",
)

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
buf.toolchains(
    sha256 = "9fa69dd51837106d688687dbe5ab63cbef41cb09ff362284c3e90dcedb126dab",
    version = "v1.71.0",
)
# use_repo(buf, "buf_toolchains")

bazel_dep(
    name = "rules_shell",
    version = "0.8.0",
)
bazel_dep(
    name = "rules_gitops",
    version = "1.0.0-rc.2",
)

kustomize = use_extension(
    "@rules_gitops//kustomize:defs.bzl",
    "kustomize",
)
kustomize.toolchain(
    version = "5.8.0",
)

kubectl = use_extension(
    "@rules_gitops//kubectl:defs.bzl",
    "kubectl",
)
kubectl.toolchain(
    version = "1.35.0",
)

bazel_dep(
    name = "rules_img",
    version = "0.3.13",
)

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "distroless",
    digest = "sha256:838610585824d0141daf5d76af5778f59a6f9dcc1a822148c790c9043c89e8eb",
    registry = "gcr.io",
    repository = "distroless/static-debian13",
    tag = "latest-amd64",
)

bazel_dep(
    name = "rules_nodejs",
    version = "6.7.4",
)
bazel_dep(
    name = "aspect_rules_js",
    version = "3.2.2",
)
bazel_dep(
    name = "aspect_rules_ts",
    version = "3.8.11",
)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    node_version = "24.18.0",
)
use_repo(node, "nodejs_toolchains")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(
    pnpm_version_from = "//:package.json",
)
use_repo(pnpm, "pnpm")

typescript = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
typescript.deps(
    name = "typescript",
    ts_version_from = "//:package.json",
)
use_repo(typescript, "typescript")

bazel_dep(
    name = "rules_multitool",
    version = "1.11.1",
)

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(
    lockfile = "//:multitool.lock.json",
)
use_repo(multitool, "multitool")
