load("@bazel_env.bzl", "bazel_env")
load("@multitool//:tools.bzl", "TOOLS")

exports_files(
    ["tools.json"],
)

bazel_env(
    name = "bazel_env",
    toolchains = {
        "nodejs": "@nodejs_toolchains//:resolved_toolchain",
    },
    tools = {
        "go": "@rules_go//go",
        "node": "$(NODE_PATH)",
        "pnpm": "@pnpm",
    } | TOOLS,
)
