load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "aws_lib",
    srcs = ["main.go"],
    importpath = "github.com/qhai-dev/kairo/infra/aws",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "aws",
    embed = [":aws_lib"],
    visibility = ["//visibility:public"],
)
