load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "aws_lib",
    srcs = ["main.go"],
    importpath = "github.com/qhai-dev/kairo/infra/aws",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_pulumi_pulumi_aws_sdk_v7//go/aws/s3",
        "@com_github_pulumi_pulumi_sdk_v3//go/pulumi",
    ],
)

go_binary(
    name = "aws",
    embed = [":aws_lib"],
    visibility = ["//visibility:public"],
)
