load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "v1_proto",
    srcs = ["test.proto"],
    strip_import_prefix = "/backend/kapis",
    visibility = ["//visibility:public"],
)

buf_lint_test(
    name = "v1_proto_lint",
    config = "//:buf.yaml",
    module = "backend/kapis",
    targets = [":v1_proto"],
)
