load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "v1_proto",
    srcs = ["test2.proto"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "test2",
    embed = [":v1_go_proto"],
    importpath = "github.com/qhai-dev/kairo/backend/kapis/test2/v1",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "@rules_go//proto:go_grpc_v2",
    ],
    importpath = "github.com/qhai-dev/kairo/backend/kapis/test2/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
)
