load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/qhai-dev/kairo/backend/app/admin/manager/cmd",
    visibility = ["//visibility:private"],
    deps = ["//backend/library/framework"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
